<resources>
    <string name="app_name">QuizzApp</string>

    <!--Question 1 MAX CHAR [30] -->
    <string name="question1">What is an intent?</string>

    <!--Question 1 answer1 MAX CHAR [30] -->
    <string name="intentAnswer1">Its a pie!</string>

    <!--Question 1 answer2 MAX CHAR [50] -->
    <string name="intentAnswer2">An intent is an abstract description of an operation to be performed.</string>

    <!--Question 1 answer3 MAX CHAR [30] -->
    <string name="intentAnswer3">Its a pie!</string>

    <!--Question 2 MAX CHAR [30] -->
    <string name="question2">What is a View in android?</string>

    <!--Question 2 Answer1 MAX CHAR [30] -->
    <string name="viewAnswer1">View is the base class for widgets, which are used to create interactive UI components (buttons, text fields, etc.).</string>

    <!--Question 2 Answer2 MAX CHAR [30] -->
    <string name="viewAnswer2">Range or sight or vision</string>

    <!--Question 2 Answer3 MAX CHAR [30] -->
    <string name="viewAnswer3">A picture or photograph of something</string>

    <!--Question 3 MAX CHAR [30] -->
    <string name="question3">What is a toast?</string>

    <!--Question 3 Answer1 MAX CHAR [30] -->
    <string name="toastAnswer1">Ñumy! Breakfast!.</string>

    <!--Question 3 Answer2 MAX CHAR [30] -->
    <string name="toastAnswer2">A toast provides simple feedback about an operation in a small popup.</string>

    <!--Question 3 Answer3 MAX CHAR [30] -->
    <string name="toastAnswer3">Its a french recipe.</string>

    <!-- Question 4 MAX CHAR [20] -->
    <string name="question4">What is a RelativeLayout?</string>

    <!-- Question 4 Answer1 MAX CHAR [50] -->
    <string name="relativeLayoutAnswer1">RelativeLayout is a view group that displays child views in relative positions</string>

    <!-- Question 4 Answer2 MAX CHAR [50] -->
    <string name="relativeLayoutAnswer2">All is relative in this life, the time, the space, the layouts</string>

    <!-- Question 4 Answer3 MAX CHAR [50] -->
    <string name="relativeLayoutAnswer3">RelativeLayout is a view group that displays child views in Linear positions</string>

    <!-- Question 5 MAX CHAR [20] -->
    <string name="question5">What is a LinearLayout?</string>

    <!-- Question 5 Answer1 MAX CHAR [20] -->
    <string name="linearLayoutAnswer1">Its a linear, not curvy, line.</string>

    <!-- Question 5 Answer2 MAX CHAR [20] -->
    <string name="linearLayoutAnswer2">LinearLayout is a view group that aligns all children in a single direction, vertically or horizontally.</string>

    <!-- Question 5 Answer3 MAX CHAR [20] -->
    <string name="linearLayoutAnswer3">Its a linear, not curvy, line.</string>

    <!--Button-->
    <string name="quiz">Quiz!</string>
    <!--Score Text-->
    <string name="scoreText">Your Score Is!:</string>
</resources>
